--- a/project.html
+++ b/project.html
@@ -345,7 +345,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-roilevelup-2024-12-01-04_42_17.png"
+                                <img src="assets/img/full-page/screencapture-roilevelup-2024-12-01-04_42_17_3_11zon.webp"
                                     alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
@@ -374,7 +374,7 @@
                         loading="lazy">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-app-thepathfinderhub-2024-12-01-04_43_17.png"
+                                <img src="assets/img/full-page/screencapture-app-thepathfinderhub-2024-12-01-04_43_17_3_11zon.webp"
                                     alt="img">
                             </div>
                             <div class="project__content">
@@ -401,7 +401,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-shortlistme-2024-12-01-04_43_51.png"
+                                <img src="assets/img/full-page/screencapture-shortlistme-2024-12-01-04_43_51_4_11zon.webp"
                                     alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
@@ -429,7 +429,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-superbullionwire-about-2024-12-02-22_55_11.png"
+                                <img src="assets/img/full-page/screencapture-superbullionwire-about-2024-12-02-22_55_11_5_11zon.webp"
                                     alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
@@ -456,7 +456,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2300">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-peglobal-net-2024-12-01-04_45_39.png"
+                                <img src="assets/img/full-page/screencapture-peglobal-net-2024-12-01-04_45_39_2_11zon.webp"
                                     alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
@@ -484,7 +484,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-amberoil-ie-2024-12-01-04_46_12.png"
+                                <img src="assets/img/full-page/screencapture-amberoil-ie-2024-12-01-04_46_12_2_11zon.webp"
                                     alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
@@ -512,7 +512,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2700">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-mcci-ie-2024-12-01-04_46_48.png"
+                                <img src="assets/img/full-page/screencapture-mcci-ie-2024-12-01-04_46_48_1_11zon.webp"
                                     alt="images" loading="lazy">
                             </div>
                             <div class="project__content">
@@ -540,7 +540,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-ikc-ie-2024-12-01-04_48_06.png" alt="image"
+                                <img src="assets/img/full-page/screencapture-ikc-ie-2024-12-01-04_48_06_1_11zon.webp" alt="image"
                                     loading="lazy">
                             </div>
                             <div class="project__content">
@@ -617,7 +617,7 @@
                                             <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
+                                            <h6>Mattie Warner</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -646,7 +646,7 @@
                                             <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Kristin Gilbert</a></h6>
+                                            <h6>Kristin Gilbert</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -674,7 +674,7 @@
                                             <img src="assets/img/testimonial/testimonial__6.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Arlene Miles</a></h6>
+                                            <h6>Arlene Miles</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -702,7 +702,7 @@
                                             <img src="assets/img/testimonial/testimonial__7.jpg" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Richard W. Thomas</a></h6>
+                                            <h6>Richard W. Thomas</h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -731,7 +731,7 @@
                                             <img src="assets/img/testimonial/1724692476765.jpg" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Shelley Zalis</a></h6>
+                                            <h6>Shelley Zalis</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
