--- a/error.html
+++ b/error.html
@@ -297,7 +297,7 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(assets/img/about/404error.png); background-size: cover;">
+        <div class="breadcrumbarea" style="background: url(assets/img/about/404error_3.webp); background-size: cover;">
             <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
@@ -334,7 +334,7 @@
                 <div class="row">
                     <div class="col-xl-12 sp_bottom_80" data-aos="fade-up" data-aos-duration="1500">
                         <div class="error__img text-center">
-                            <img src="assets/img/contact/error.png" alt="img" style="width: 100%; height: 100%;">
+                            <img src="assets/img/contact/error.webp" alt="img" style="width: 100%; height: 100%;">
                         </div>
                     </div>
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
