contact us images compress

--- a/contact.html
+++ b/contact.html
@@ -314,7 +314,7 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
-            style="background: url(assets/img/about/about-1.png);">
+            style="background: url(assets/img/about/about-1.webp);">
             <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
@@ -528,7 +528,7 @@
                             </div>
                         </div>
                         <div class="contact__img" data-aos="fade-up" data-aos-duration="1500">
-                            <img src="assets/img/contact/contact.png" alt="">
+                            <img src="assets/img/contact/contact.webp" alt="img">
                         </div>
                     </div>
                 </div>
