--- a/about.html
+++ b/about.html
@@ -334,7 +334,7 @@
         <!-- breadcrumbarea__end -->
 
         <div class="about__team__sec__wrap"
-            style="background: var(--pinkcolor) url(assets/img/about/about__bg__2.png);">
+            style="background: var(--pinkcolor) url(assets/img/about/about__bg__2.webp);">
             <!-- about__section__start -->
             <div class="about about__white__bg position-relative sp_bottom_120 sp_top_160" id="about__mission__area">
                 <div class="container">
@@ -396,7 +396,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="1500">
                             <div class="about__img__3" data-tilt>
-                                <img src="assets/img/about/medium-shot-executive-men.jpg" alt=""
+                                <img src="assets/img/about/medium-shot-executive_1.webp" alt="img"
                                     style="border-radius: 20px 20px 20px 20px;">
                             </div>
                         </div>
@@ -432,7 +432,7 @@
                             <div class="team__member__3__single text-center single__transform">
                                 <div class="team__member__3__single__inner">
                                     <div class="team__member__3__img">
-                                        <img src="assets/img/team/Ahmad.png" alt="img">
+                                        <img src="assets/img/team/Ahmad.webp" alt="img">
                                     </div>
                                     <div class="team__member__name">
                                         <h6>Mr. Muhammad Ahmad Raza</h6>
@@ -487,7 +487,7 @@
                             <div class="team__member__3__single text-center single__transform">
                                 <div class="team__member__3__single__inner" style="height: 385px;">
                                     <div class="team__member__3__img">
-                                        <img src="assets/img/team/Butt.jpeg" alt="">
+                                        <img src="assets/img/team/Butt.webp" alt="img">
                                     </div>
                                     <div class="team__member__name">
                                         <h6>Mr. Nadeem</h6>
@@ -504,7 +504,7 @@
                             <div class="team__member__3__single text-center single__transform">
                                 <div class="team__member__3__single__inner" style="height: 385px;">
                                     <div class="team__member__3__img">
-                                        <img src="assets/img/team/daniyal-sb.png" alt="img">
+                                        <img src="assets/img/team/daniyal-sb.webp" alt="img">
                                     </div>
                                     <div class="team__member__name">
                                         <h6>Mr. Daniyal Amjad</h6>
@@ -619,7 +619,7 @@
                                             <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
+                                            <h6>Mattie Warner</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -648,7 +648,7 @@
                                             <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Kristin Gilbert</a></h6>
+                                            <h6>Gilbert</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -676,7 +676,7 @@
                                             <img src="assets/img/testimonial/testimonial__6.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Arlene Miles</a></h6>
+                                            <h6>Arlene Miles</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -704,7 +704,7 @@
                                             <img src="assets/img/testimonial/testimonial__7.jpg" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Richard W. Thomas</a></h6>
+                                            <h6>Richard W. Thomas</h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -733,7 +733,7 @@
                                             <img src="assets/img/testimonial/1724692476765.jpg" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Shelley Zalis</a></h6>
+                                            <h6>Shelley Zalis</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -779,7 +779,7 @@
 
         <!-- blog__section__start -->
         <div class="blog__3 sp_bottom_200 sp_top_140 special__spacing"
-            style="background-image: url(assets/img/blog/blog__bg_2.png);">
+            style="background-image: url(assets/img/blog/blog__bg_2.webp);">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12" data-aos="fade-up"
@@ -805,7 +805,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1800">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="assets/img/blog/app-blog.png" alt="image">
+                                <img src="assets/img/blog/app-blog.webp" alt="image">
                             </div>
                             <div class="blog__4__time">
                                 <p><span class="text__gradient">08 May, 2024</span></p>
@@ -826,7 +826,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="assets/img/blog/Web-blog.png" alt="image">
+                                <img src="assets/img/blog/Web-blog.webp" alt="image">
                             </div>
                             <div class="blog__4__time">
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
