--- a/team.html
+++ b/team.html
@@ -298,7 +298,7 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea "
-            style="background: url(assets/img/about/about-2.png); background-size: cover; background-position: 100% 100%;">
+            style="background: url(assets/img/about/about-2.webp); background-size: cover; background-position: 100% 100%;">
             <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
@@ -338,7 +338,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/Ahmad.png" alt="Ahmad">
+                                    <img src="assets/img/team/Ahmad.webp" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Muhammad Ahmad Raza</h6>
@@ -374,7 +374,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/tahir.png" alt="">
+                                    <img src="assets/img/team/tahir.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Tahir</h6>
@@ -392,7 +392,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/Butt.jpeg" alt="Ahmad">
+                                    <img src="assets/img/team/Butt.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Nadeem</h6>
@@ -407,7 +407,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/Abdul-rehman-sb.png" alt="Ahmad">
+                                    <img src="assets/img/team/Abdul-rehman-sb.webp" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Abdul Rahman</h6>
@@ -424,7 +424,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/awais-ali.png" alt="img">
+                                    <img src="assets/img/team/awais-ali.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Awais Ali</h6>
@@ -441,7 +441,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/daniyal-sb.png" alt="img">
+                                    <img src="assets/img/team/daniyal-sb.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Daniyal Amjad</h6>
@@ -457,7 +457,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/saif.png" alt="img">
+                                    <img src="assets/img/team/saif.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Saif-e-Rahman</h6>
@@ -473,7 +473,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/ahmad-fareed.png" alt="img">
+                                    <img src="assets/img/team/ahmad-fareed.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Ahmad Fareed</h6>
@@ -489,7 +489,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/hamid.png" alt="img">
+                                    <img src="assets/img/team/hamid.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Hamid Raza</h6>
@@ -503,7 +503,7 @@
                     <div class="team__member__3__single team__member__border text-center single__transform">
                         <div class="team__member__3__single__inner" style="height: 385px;">
                             <div class="team__member__3__img">
-                                <img src="assets/img/team/tayyab.png" alt="img">
+                                <img src="assets/img/team/tayyab.webp" alt="img">
                             </div>
                             <div class="team__member__name">
                                 <h6>Mr. Tayyab Karamat</h6>
@@ -519,7 +519,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/amir.png" alt="img">
+                                    <img src="assets/img/team/amir.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Amir Khan</h6>
@@ -533,7 +533,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/hanzla.png" alt="img">
+                                    <img src="assets/img/team/hanzla.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Hanzla Shahid</h6>
@@ -548,7 +548,7 @@
                     <div class="team__member__3__single text-center team__member__border single__transform">
                         <div class="team__member__3__single__inner" style="height: 385px;">
                             <div class="team__member__3__img">
-                                <img src="assets/img/team/Kashif.png" alt="img">
+                                <img src="assets/img/team/Kashif.webp" alt="img">
                             </div>
                             <div class="team__member__name">
                                 <h6>Mr. Kashif</h6>
@@ -562,7 +562,7 @@
                     <div class="team__member__3__single team__member__border text-center single__transform">
                         <div class="team__member__3__single__inner" style="height: 385px;">
                             <div class="team__member__3__img">
-                                <img src="assets/img/team/awais_ch.png" alt="img">
+                                <img src="assets/img/team/awais_ch.webp" alt="img">
                             </div>
                             <div class="team__member__name">
                                 <h6>Mr. Awais</h6>
@@ -578,7 +578,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/Shoaib.png" alt="img">
+                                    <img src="assets/img/team/Shoaib.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Shoaib Jamil</h6>
@@ -593,7 +593,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/saif-content.png" alt="img">
+                                    <img src="assets/img/team/saif-content.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Saif</h6>
@@ -608,7 +608,7 @@
                         <div class="team__member__3__single text-center team__member__border single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/Mr-Saim.png" alt="img">
+                                    <img src="assets/img/team/Mr-Saim.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Saim</h6>
@@ -622,7 +622,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/Waleed.png" alt="img">
+                                    <img src="assets/img/team/Waleed.webp" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Waleed</h6>
@@ -647,7 +647,7 @@
 
         <!-- blog__section__start -->
         <div class="blog__3 sp_bottom_200 sp_top_140 special__spacing"
-            style="background: url(assets/img/blog/blog__bg_2.png);">
+            style="background: url(assets/img/blog/blog__bg_2.webp);">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12" data-aos="fade-up"
@@ -673,7 +673,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1800">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="assets/img/blog/app-blog.png" alt="image">
+                                <img src="assets/img/blog/app-blog.webp" alt="image">
                             </div>
                             <div class="blog__4__time">
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
@@ -695,7 +695,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="blog__4__single blog__3__single single__transform">
                             <div class="blog__4__img">
-                                <img src="assets/img/blog/Web-blog.png" alt="image">
+                                <img src="assets/img/blog/Web-blog.webp" alt="image">
                             </div>
                             <div class="blog__4__time">
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
