compress blog-detail pages

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
         <!-- herobanner__section__start -->
         <div class="herobanner herobanner__with__transparent__header"
-            style="background: url(assets/img/herobaner/herobanner__1.jpg);">
+            style="background: url(assets/img/herobaner/herobanner__1.webp);">
             <div class="container">
                 <div class="herobanner__wrapper">
 
@@ -471,7 +471,7 @@
 
         <!-- service__section__start -->
         <div class="service sp_top_140 sp_bottom_330 special__spacing aos-init aos-animate" id="service__area"
-            style="background: var(--pinkcolor) url(assets/img/service/service__bg__img.png);" data-aos="fade-up">
+            style="background: var(--pinkcolor) url(assets/img/service/service__bg__img.webp);" data-aos="fade-up">
             <div class="container mt-5">
                 <div class="about-section d-flex flex-column align-items-center text-center">
                     <div class="row align-items-center">
@@ -531,7 +531,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="assets/img/services-home/wb.jpg" class="img-fluid rounded-start"
+                                            <img src="assets/img/services-home/wb.webp" class="img-fluid rounded-start"
                                                 alt="img">
                                         </div>
                                         <div class="col-md-8">
@@ -554,7 +554,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="assets/img/services-home/soft-min.jpg" class="img-fluid rounded-start"
+                                            <img src="assets/img/services-home/soft-min.webp" class="img-fluid rounded-start"
                                                 alt="img">
                                         </div>
                                         <div class="col-md-8">
@@ -576,7 +576,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="assets/img/services-home/game.jpg" class="img-fluid rounded-start"
+                                            <img src="assets/img/services-home/game.webp" class="img-fluid rounded-start"
                                                 alt="img">
                                         </div>
                                         <div class="col-md-8">
@@ -597,7 +597,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="assets/img/services-home/app.jpg" class="img-fluid rounded-start"
+                                            <img src="assets/img/services-home/app.webp" class="img-fluid rounded-start"
                                                 alt="img">
                                         </div>
                                         <div class="col-md-8">
@@ -618,7 +618,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="assets/img/services-home/seo.jpg" class="img-fluid rounded-start"
+                                            <img src="assets/img/services-home/seo.webp" class="img-fluid rounded-start"
                                                 alt="img">
                                         </div>
                                         <div class="col-md-8">
@@ -639,7 +639,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="assets/img/services-home/ui.png" class="img-fluid rounded-start"
+                                            <img src="assets/img/services-home/ui.webp" class="img-fluid rounded-start"
                                                 alt="img">
                                         </div>
                                         <div class="col-md-8">
@@ -661,7 +661,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="assets/img/services-home/it.jpg" class="img-fluid rounded-start"
+                                            <img src="assets/img/services-home/it.webp" class="img-fluid rounded-start"
                                                 alt="img">
                                         </div>
                                         <div class="col-md-8">
@@ -684,7 +684,7 @@
                                 <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
-                                            <img src="assets/img/services-home/Content.jpg"
+                                            <img src="assets/img/services-home/Content.webp"
                                                 class="img-fluid rounded-start" alt="img">
                                         </div>
                                         <div class="col-md-8">
@@ -719,7 +719,7 @@
                                 <h2>INTRO</h2>
                             </div>
 
-                            <img src="assets/img/video/video__1.png" alt="img">
+                            <img src="assets/img/video/video__1.webp" alt="img">
                             <div class="video__small__img">
                                 <img src="assets/img/video/video__2.png" alt="img">
                             </div>
