--- a/what-is-software-development.html
+++ b/what-is-software-development.html
@@ -312,7 +312,7 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(assets/img/herobaner/soft.jpg);">
+        <div class="breadcrumbarea" style="background: url(assets/img/herobaner/soft.webp);">
             <div class="breadcrumbarea__overlay"></div>
             <div class="container">
                 <div class="row">
@@ -325,7 +325,7 @@
                                 <ul>
                                     <li><a href="/">Home</a></li>
                                     <li>// </li>
-                                    <li> Blog</li>
+                                    <li> Blog Details</li>
                                 </ul>
                             </div>
                         </div>
@@ -455,7 +455,7 @@
                                         <li>
                                             <a href="what-is-web-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/Web-blog.png" alt="img"
+                                                    <img src="assets/img/blog/Web-blog.webp" alt="img"
                                                         style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
@@ -468,7 +468,7 @@
                                         <li>
                                             <a href="what-is-mobile-application-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/app-blog.png" alt="img"
+                                                    <img src="assets/img/blog/app-blog.webp" alt="img"
                                                         style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
@@ -482,7 +482,7 @@
                                         <li>
                                             <a href="what-is-software-development">
                                                 <div class="sidebar__post__img">
-                                                    <img src="assets/img/blog/Software.png" alt="img"
+                                                    <img src="assets/img/blog/Software.webp" alt="img"
                                                         style="width: 90px; height: 90px; border-radius: 5px;">
                                                 </div>
                                                 <div class="sidebar__post__text">
@@ -554,7 +554,7 @@
 
                             <div class="blog__details__img__wrapper" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="blog__details__img">
-                                    <img src="assets/img/blog/Software.png" alt="img">
+                                    <img src="assets/img/blog/Software.webp" alt="img">
                                 </div>
                                 <div class="blog__details__small__button">
                                     <span>08 May, 2024</span>
