--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -269,8 +269,8 @@
                             <ul class="offcanvas__sub_menu">
                                 <li class="offcanvas__sub_menu_li"><a href="blog"
                                         class="offcanvas__sub_menu_item">Blog</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="blog-details"
-                                        class="offcanvas__sub_menu_item">Blog Details</a></li>
+                                        <li class="offcanvas__sub_menu_li"><a href="team"
+                                            class="offcanvas__sub_menu_item">Team</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="project"
                                         class="offcanvas__sub_menu_item">Projects</a></li>
                                 <!-- <li class="offcanvas__sub_menu_li"><a href="project-details.html"
