--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
                                             <img src="assets/img/testimonial/testimonial__4.png" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
+                                            <h6>Mattie Warner</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -1207,7 +1207,7 @@
                                             <img src="assets/img/testimonial/testimonial__5.png" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Kristin Gilbert</a></h6>
+                                            <h6>Kristin Gilbert</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -1235,7 +1235,7 @@
                                             <img src="assets/img/testimonial/testimonial__6.png" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Arlene Miles</a></h6>
+                                            <h6>Arlene Miles</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
@@ -1263,7 +1263,7 @@
                                             <img src="assets/img/testimonial/testimonial__7.jpg" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Richard W. Thomas</a></h6>
+                                            <h6>Richard W. Thomas</h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -1292,7 +1292,7 @@
                                             <img src="assets/img/testimonial/1724692476765.jpg" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="javascript:void(0)">Shelley Zalis</a></h6>
+                                            <h6>Shelley Zalis</h6>
                                             <p>Business Woman</p>
                                         </div>
                                     </div>
